--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -37,8 +37,8 @@
 
         <div class="executive-summary" itemprop="description">
           <p>Hello!. My name is Viet</p>
-          <p>I began my journey as a macOS developer in 2013 before transitioning seamlessly into the automotive engineering sector in 2016. With knowledge in macOS development, I quickly adapted my expertise to the dynamic challenges of automotive software engineering, where I have since excelled</p>
-          <p>In addition to my technical skills, I have three years of experience in leadership and management roles, overseeing teams of up to 20 members. Throughout my tenure, I have fostered environments of collaboration and innovation, driving both technical excellence and team cohesion. My ability to navigate complex projects and guide teams to success has been integral to achieving organizational objectives. As I continue to evolve in my career, I am eager to leverage my diverse skill set and management experience to contribute to innovative projects and drive impactful outcomes.</p>
+          <p>I began my journey as a macOS developer in 2013 before transitioning seamlessly into the Embedded engineering sector in 2016. With knowledge in software development, I quickly adapted my expertise to the dynamic challenges of Embedded software engineering, where I have since excelled</p>
+          <p>In addition to my technical skills, I have over three years of experience in leadership and management roles, overseeing teams of more than 20 members. Throughout my tenure, I have fostered environments of collaboration and innovation, driving both technical excellence and team cohesion. My ability to navigate complex projects and guide teams to success has been integral to achieving organizational objectives. As I continue to evolve in my career, I am eager to leverage my diverse skill set and management experience to contribute to innovative projects and drive impactful outcomes.</p>
           <p><b>Visit me through these platforms if you want to know more about me.<b/></p>
         </div>
       </header>
